Added arows and common corrections

--- a/styles/less/aside.less
+++ b/styles/less/aside.less
@@ -173,6 +173,8 @@
     .flexbox;
     background-color: @whiteBlue2;
     padding: 25px 15px 5px;
+    margin-top: -20px;
+    margin-bottom: 20px;
   }
 
   #about-toggle:checked + .about,
@@ -192,12 +194,9 @@
         margin: 0;
       }
 
-      .icon-about {
-        background-image: url("../images/images/blog-v03-Recovered_14.png");
-      }
-
+      .icon-about,
       .icon-something {
-        background-image: url("../images/images/blog-v03-Recovered_03.png");
+        background-position: 30px 182px;
       }
 
       h2 {
