--- a/styles/less/articles.less
+++ b/styles/less/articles.less
@@ -80,7 +80,7 @@
 }
 
 .publishing {
-  display: flex;
+  .flexbox;
   button {
     .text-builder(white, Arial, 14px, 24px);
     border: none;
@@ -123,7 +123,7 @@
       width: 24px;
       margin-right: 6px;
       display: inline-block;
-      background-image: url('../../images/sprite.png');
+      .sprite;
     }
   }
 }
@@ -163,7 +163,6 @@
   }
 
   .publishing {
-    .flexbox;
     .flex-direction(column);
     .align-items(flex-end);
     position: absolute;
