--- a/styles/less/articles.less
+++ b/styles/less/articles.less
@@ -5,7 +5,7 @@
   margin: 0 30px;
 
   article {
-    .text-builder(@darkGray, Arial, 12px, 18px);
+    .text-builder(@darkGray, Arial, 0.75em, 18px);
     text-align: justify;
     padding: 35px 0 15px;
 
