--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -14,7 +14,7 @@ header {
     .align-items(center);
 
     h1 {
-      .text-builder(@blueGray, TrendSansOne, 38, @height: auto);
+      .text-builder(@blueGray, TrendSansOne, 38px);
       font-weight: 100;
       text-transform: uppercase;
       margin: 4px 5px;
