--- a/styles/less/mixins.less
+++ b/styles/less/mixins.less
@@ -2,7 +2,7 @@
   background-image: url("../../images/sprite.png");
 }
 
-.text-builder(@color, @font, @size, @height: auto) {
+.text-builder(@color, @font, @size, @height: inherit) {
   color: @color;
   font-family: @font;
   font-size: @size;
