--- a/styles/less/aside.less
+++ b/styles/less/aside.less
@@ -12,7 +12,7 @@
   margin-top: 35px;
 
   p {
-    .text-builder(@darkGray, Arial, 12px, 18px);
+    .text-builder(@darkGray, Arial, 0.75em, 18px);
     text-align: justify;
   }
 }
@@ -52,7 +52,7 @@
   flex-wrap: wrap;
 
   .label {
-    .text-builder(white, Arial, 12px, 11px);
+    .text-builder(white, Arial, 0.75em, 11px);
     background-color: @blueGray;
     padding: 4px 15px;
     margin: 3px 13px 3px 0;
