--- a/styles/less/navigation.less
+++ b/styles/less/navigation.less
@@ -70,7 +70,7 @@ nav {
 }
 
 label[for="menu-toggle"].selected-section:after {
-  .arrow-colors(@blue, @blue, 2px);
+  background-color: @blue;
 }
 
 @media screen and (max-width: 1024px) {
